@@ -1,6 +1,6 @@
 plugins {
     id 'scala'
-    id 'java-library'
+    id 'java'
 }
 
 
@@ -58,6 +58,7 @@ dependencies {
 
     integrationTestCompile(
             'com.amazonaws:aws-java-sdk-cloudformation:1.11.166',
+            'com.amazonaws:aws-java-sdk-core:1.11.510',
             'org.scalatest:scalatest_2.11:3.0.0',
             'org.junit.jupiter:junit-jupiter-api:5.1.0',
             'org.glassfish.jersey.core:jersey-client:2.5.1',
@@ -72,46 +73,9 @@ dependencies {
 }
 
 
-task integrationTest(type: Test) {
 
-    useJUnitPlatform()
-    // explicitly include or exclude tests
-    include 'ski/crunch/**'
-
-
-    // show standard out and standard error of the test JVM(s) on the console
-    testLogging.showStandardStreams = true
-
-    // set heap size for the test JVM(s)
-    minHeapSize = "128m"
-    maxHeapSize = "512m"
-
-    // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
-
-    // listen to events in the test execution lifecycle
-    beforeTest { descriptor ->
-        logger.lifecycle("Running integration test: " + descriptor)
-    }
-
-    // Fail the 'test' task on the first test failure
-    failFast = true
-
-    // listen to standard out and standard error of the test JVM(s)
-    onOutput { descriptor, event ->
-        logger.lifecycle(event.message)
-    }
-
-
-    description = 'Runs the integration tests.'
-    group = 'verification'
-    testClassesDirs = sourceSets.integrationTest.output
-    classpath = sourceSets.integrationTest.runtimeClasspath
-    outputs.upToDateWhen { false }
-}
-
-configurations.implementation.setCanBeResolved(true)
-configurations.api.setCanBeResolved(true)
+//configurations.implementation.setCanBeResolved(true)
+//configurations.api.setCanBeResolved(true)
 check.dependsOn integrationTest
 integrationTest.mustRunAfter test
 
@@ -124,24 +88,13 @@ task buildZip(type: Zip) {
     from compileJava
     from compileScala
     from processResources
-//    exclude "ski-crunch-utils.jar"
-//    exclude "ski-crunch-common.jar"
     into('lib') {
         from ([ configurations.compile ] - [ configurations.compileOnly ])
-        //from configurations.implementation
     }
 }
 
 build.dependsOn buildZip
-/**
- * Deploys the build to the staging environment
- */
-task deployStaging(type: Exec) {
-    environment 'PATH', "${environment.PATH}:/usr/local/bin"
 
-    commandLine 'sls', 'deploy', '-v'
-}
-deployStaging.dependsOn build
 
 
 task wrapper(type: Wrapper) {
